fix comment thread spacing

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -142,14 +142,13 @@ form {
 
 .comments-container {
   p {
-    margin-bottom: 5px !important;
+    margin-bottom: 3px !important;
     font-size: 13px;
     margin-left: 30px;
   }
   .comment-nav {
     margin-left: 5px;
     margin-bottom: 10px;
-
     a {
       font-size: 11px;
       font-weight: bold;
@@ -177,10 +176,14 @@ form {
   padding: 10px 0;
 }
 
+.reply-comment {
+  padding-bottom: 0 !important;
+}
+
 #comment-reply-form {
   margin-left: 50px;
   margin-bottom: 10px;
-  margin-top: -33px;
+  margin-top: -12px;
   .submit-reply-comment[disabled] {
     background-color: gray !important;
     border-color: gray !important;
